--- a/options.html
+++ b/options.html
@@ -9,8 +9,14 @@
 <body>
     <form>
         <label>Username</label>
-        <input type="text" placeholder="username">
+        <input type="text" name="uid" placeholder="username">
+
+        <label>Password</label>
+        <input type="password" name="pw" placeholder="password">
+
+        <button type="submit" name="save">Save</button>
     </form>
+    <script src="options.js"></script>
 </body>
 
 </html>
