login error dectection

--- a/options.html
+++ b/options.html
@@ -9,10 +9,10 @@
 <body>
     <form>
         <label>Username</label>
-        <input type="text" name="uid" placeholder="username">
+        <input type="text" name="uid" placeholder="username" required>
 
         <label>Password</label>
-        <input type="password" name="pw" placeholder="password">
+        <input type="password" name="pw" placeholder="password" required>
 
         <button type="submit" name="save">Save</button>
     </form>
